@@ -124,6 +124,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\game\entity\Entity.cs" />
+    <Compile Include="src\game\entity\mob\Mob.cs" />
     <Compile Include="src\game\entity\mob\Player.cs" />
     <Compile Include="src\game\graphics\Screen.cs" />
     <Compile Include="src\game\input\KeyBoard.cs" />
@@ -132,6 +133,7 @@
     <Compile Include="src\game\level\Level.cs" />
     <Compile Include="src\game\level\PlannedLevel.cs" />
     <Compile Include="src\game\graphics\Sprite.cs" />
+    <Compile Include="src\game\level\Tile.cs" />
     <Compile Include="src\game\utility\Coordinate.cs" />
   </ItemGroup>
   <ItemGroup>
