@@ -1,16 +1,16 @@
-0 0 16777216
-1 0 13421773
-2 0 11776948
-3 0 10197916
-4 0 3618616
-5 0 1
-0 1 8882056
-1 1 8224126
-2 1 9539986
-3 1 11250604
-3 2 9408400
-3 3 10066330
-4 1 4210753
-4 2 3881788
-4 3 3355444
-5 1 2
+0 0 16777216 1 0
+1 0 13421773 1 0
+2 0 11776948 1 0
+3 0 10197916 0 1
+4 0 3618616 0 1
+5 0 1 0 0
+0 1 8882056 1 0
+1 1 8224126 1 0
+2 1 9539986 1 0
+3 1 11250604 0 1
+3 2 9408400 0 1
+3 3 10066330 0 1
+4 1 4210753 0 1
+4 2 3881788 0 1
+4 3 3355444 0 1
+5 1 2 0 0
